Fixed z-index issue when using darkreader

--- a/src/app/Pages/misc/pages/misc-plutus-new/plutus-new/misc-plutus-new.component.css
+++ b/src/app/Pages/misc/pages/misc-plutus-new/plutus-new/misc-plutus-new.component.css
@@ -2,16 +2,17 @@
     width: 100%;
     background-color: white;
     position: relative;
+    z-index: 2;
 }
 
 .contentpageSecondaryColor {
     background-color: #F5F9FF;
-    z-index: -1;
+    z-index: 1;
 }
 
 .contentpageTertiaryColor {
     background-color: #2649EC;
-    z-index: 2;
+    z-index: 3;
 }
 
 .currencyButton {
@@ -291,7 +292,7 @@ hr {
     color: white;
     font-family: monospace;
     border-radius: 50%;
-    padding: 2px 6px 3px 6px;
+    padding: 2px 6px 2px 6px;
     margin-left: 15px;
     transform: translateY(-3px);
 }
